--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,6 +29,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 48px;
 }
 
 .bottom-row {
@@ -38,4 +39,12 @@ body {
 
 .button {
     justify-self: start;
+    color: #3882f6;
+}
+
+h2 {
+    text-align: center;
+    font-size: 36px;
+    font-weight: extra-bold;
+    color: #1f2937;
 }
