--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,3 +48,14 @@ h2 {
     font-weight: extra-bold;
     color: #1f2937;
 }
+
+.container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.container img {
+    width: auto;
+    height: 250px;
+}
