--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,6 +61,8 @@ body {
     background-color: #3882f6;
     justify-self: start;
     width: fit-content;
+    color: white;
+    font-weight: bold;
 }
 
 h2 {
@@ -94,7 +96,7 @@ h2 {
     height: auto;
 }
 
-h3 {
+.quote h3 {
     font-size: 24px;
     font-style: italic;
     font-weight: 100;
@@ -110,8 +112,48 @@ h3 {
 }
 
 .action {
-    height: 100px;
-    margin-top: 100px;
+    display: flex;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+}
+
+.call-box {
+    display: flex;
+    background-color: #3882f6;
+    width: 500px;
+    align-items: center;
+    border-radius: 10px;
+    padding: 32px;
+    justify-content: space-between;
+}
+
+.call-box h3 {
+    font-weight: 200;
+    font-size: medium;
+    color: white;
+    margin: 0;
+}
+
+.call-box h4 {
+    font-weight: 100;
+    font-size: small;
+    color: white;
+    margin: 0;
+}
+
+.call-box button {
+    color: white;
+    background-color: #3882f6;
+    border-color: white;
+    height: fit-content;
+    width: fit-content;
+    border-radius: 5px;
+}
+
+.box-text {
+    display: flex;
+    flex-direction: column;
 }
 
 .footer {
