--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,8 +4,19 @@ body {
     padding: 0;
 }
 
+.content {
+    display: flex;
+}
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+}
+
 .header {
     background-color: #1f2937;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .logo {
@@ -78,6 +89,8 @@ h2 {
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .container img {
@@ -97,6 +110,8 @@ h2 {
     height: fit-content;
     padding-top: 50px;
     padding-bottom: 50px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .quote h3 {
@@ -119,6 +134,8 @@ h2 {
     height: 200px;
     justify-content: center;
     align-items: center;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .action-quote {
